[package]
authors = ["ShatakshiR <er.shatakshi@gmail.com>"]
edition = "2018"
name = "restro-server-application"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
futures = {version = "0.3.4", default-features = false, features = ["async-await"]}
mongodb = "1.2.0"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1"
serde_json = "1"
thiserror = "1.0"
tokio = {version = "0.2", features = ["macros", "rt-threaded"]}
warp = "0.2"
serde_path_to_error = "0.1"
bytes = "0.5.6"